--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>BRAVO — Agent Assist (PoC)</title>
 
   <!-- LivePerson Agent Workspace Widget SDK -->
-  https://lpcdn.lpsnmedia.net/webagent/client-SDK.min.js</script>
+  <script src="https://lpcdn.lpsnmedia.net/webagent/client-SDK.min.js"></script>
 
   <style>
     body {
@@ -306,3 +306,4 @@ render();
 
 </body>
 </html>
+
