--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <body>
 
-  <h3>BRAVO — Agent Assist <span class="badge">preview</span></h3>
+  <h3>BRAVO — Agent Assist <span class="badge">preview 1.0.9</span></h3>
   <div class="muted">
     Real‑time guidance based on the current conversation.
     Review before sending — you’re always in control.
@@ -306,6 +306,7 @@ render();
 
 </body>
 </html>
+
 
 
 
