--- a/index.html
+++ b/index.html
@@ -210,25 +210,35 @@ async function fetchTranscriptSlice(limit = 8) {
 async function insertIntoComposer(text) {
   await ensureAgentSDK();
 
-  const ok = await new Promise(r =>
-    window.lpTag.agentSDK.command(
-      "setInputText",
-      { text },
-      () => r(true),
-      () => r(false)
-    )
-  );
+  const sdk = window.lpTag.agentSDK;
+  const cmdNames = sdk.cmdNames || {};
+  const payload = { text: (text || "").trim() };
 
-  if (!ok) {
-    await new Promise(r =>
-      window.lpTag.agentSDK.command(
-        "Write ChatLine",
-        { text },
-        () => r(true),
-        () => r(false)
-      )
+  if (!payload.text) return;
+
+  const tryCmd = (cmdName) => new Promise((resolve) => {
+    sdk.command(
+      cmdName,
+      payload,
+      () => { console.log("[BRAVO] Insert OK via", cmdName); resolve(true); },
+      (e) => { console.warn("[BRAVO] Insert FAIL via", cmdName, e); resolve(false); }
     );
+  });
+
+  // 1) Preferred: write (most common insert-to-input behavior)
+  if (cmdNames.write) {
+    const ok = await tryCmd(cmdNames.write);
+    if (ok) return;
   }
+
+  // 2) Fallback: writeSC (secure channel)
+  if (cmdNames.writeSC) {
+    const ok = await tryCmd(cmdNames.writeSC);
+    if (ok) return;
+  }
+
+  // If neither exists, warn
+  console.warn("[BRAVO] No supported insert command found. cmdNames:", cmdNames);
 }
 
 /* -------------------------------------------------------
@@ -325,11 +335,3 @@ render();
 
 </body>
 </html>
-
-
-
-
-
-
-
-
