--- a/index.html
+++ b/index.html
@@ -93,34 +93,28 @@
     <h4>Things to keep in mind</h4>
     <ul>
       <li>
-        A higher bill after a recent plan change is often due to a
-        <b>transition bill</b>, where customers can see pro‑rated charges
-        from both the old plan and the new plan on the same bill.
+        Top-up / payment channels <b>recently had a known issue affecting some self-service top-ups and payments</b>; advisors should be aware this may explain unexpected behaviour, but <b>the issue is now resolved and BAU applies</b>.
       </li>
       <li>
-        A <b>Bill Estimator</b> tool is available internally to help estimate
-        charges when customers change broadband plans.
+        Refund or credit decisions must follow <b>standard (BAU) refund/billing processes</b>, as there is <b>no special exception process documented here for duplicate top-up packs</b>.
       </li>
     </ul>
 
     <h4>What to check next</h4>
     <ul>
       <li>
-        Check in Spark CRM what plan the customer was on, what plan they moved
-        to, and the <b>effective date of the change</b>.
+        Check the customer’s recent top-up history and pack activations to confirm whether two identical packs were purchased and successfully applied, and if this coincides with the reported self-service issue window.
       </li>
       <li>
-        Compare the last bill and the current bill to identify
-        <b>pro‑rated old plan charges / credits</b> and the
-        <b>new plan charges</b>.
+        Follow BAU refund/credit assessment and processing for mobile/prepaid where applicable, documenting the situation clearly (double charge, no intent to buy two packs) and whether any system error is suspected.
       </li>
     </ul>
 
     <h4>Suggested reply <span class="muted">(editable)</span></h4>
     <textarea id="suggestedReply" rows="4" readonly>
-Thanks for letting me know you’ve changed plans – that’s really helpful.
-When a plan changes, the first bill afterwards can look higher because it can include part of your old plan, part of your new plan, and any credits or adjustments for the changeover.
-I’ll pull up your last bill and this month’s bill now and break down exactly what’s different so you can see what’s one‑off for the change and what your regular monthly cost will be going forward.
+      Thanks for letting us know what’s happened, that does sound frustrating.
+      I’ll first take a look at your recent top-ups to confirm what was charged and which packs have actually been applied. Once I can see exactly what’s gone through, I’ll review whether we can reverse or credit one of those pack purchases for you and talk you through the options.
+      I’ll come back to you shortly with what I find and what we can do next.
     </textarea>
   </div>
 
@@ -335,4 +329,5 @@ render();
 
 </body>
 </html>
+
 
