--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <body>
 
-  <h3>BRAVO — Agent Assist <span class="badge">preview 1.0.12</span></h3>
+  <h3>BRAVO — Agent Assist <span class="badge">preview 1.0.13</span></h3>
   <div class="muted">
     Real‑time guidance based on the current conversation.
     Review before sending — you’re always in control.
@@ -103,7 +103,7 @@
     <h4>What to check next</h4>
     <ul>
       <li>
-        Check the customer’s recent top-up history and pack activations to confirm whether two identical packs were purchased and successfully applied, and if this coincides with the reported self-service issue window.
+        Check the customer’s recent top-up history and pack activations to confirm whether two identical packs were purchased and successfully applied, and if this <b>coincides with the reported self-service issue window</b>.
       </li>
       <li>
         Follow BAU refund/credit assessment and processing for mobile/prepaid where applicable, documenting the situation clearly (double charge, no intent to buy two packs) and whether any system error is suspected.
@@ -329,5 +329,6 @@ render();
 
 </body>
 </html>
+
 
 
