--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
     <h4>Things to keep in mind</h4>
     <ul>
       <li>
-        Top-up / payment channels <b>recently had a known issue affecting some self-service top-ups and payments</b>; advisors should be aware this may explain unexpected behaviour, but <b>the issue is now resolved and BAU applies</b>.
+        Top-up / payment channels <b>recently had a known issue</b> affecting some self-service top-ups and payments; advisors should be aware this may explain unexpected behaviour, but <b>the issue is now resolved</b> and BAU applies.
       </li>
       <li>
-        Refund or credit decisions must follow <b>standard (BAU) refund/billing processes</b>, as there is <b>no special exception process documented here for duplicate top-up packs</b>.
+        Refund or credit decisions must follow standard (BAU) refund/billing processes, as there is <b>no special exception process documented</b> here for duplicate top-up packs.
       </li>
     </ul>
 
@@ -329,6 +329,7 @@ render();
 
 </body>
 </html>
+
 
 
 
